--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="image/Projeto formafort.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    
+    <!--META TAG OG-->
+    <meta property="og:type" content="website"/>
+    <meta property="og:title" content="Forma Forte - Carpintaria"/>
+    <meta property="og:image" content="https://evandroluizxavier.github.io/forma-forte/image/Projeto%20formafort.png"/>
+    <meta property="og:description" content="Construindo com precisão,moldando com paixão"/>
+    <meta property="og:site_name" content="Forma Forte"/>
+    
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="service.css">
     <link rel="stylesheet" href="sobre.css">
