--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="navbar">
             <div class="logo"><img src="image/Projeto formafort.png" alt="">  </div>
             <ul class="links">
-                <li><a href="#home">home</a></li>
+                <li><a href="#home">Home</a></li>
                 <li><a href="#sobre">Sobre</a></li>
                 <li><a href="#serviços">Serviços</a></li>
                 <li><a href="#contatos">Contatos</a></li>
@@ -30,7 +30,7 @@
         </div>
 
         <div class="dropdown_menu">
-            <li><a href="#home">home</a></li>
+            <li><a href="#home">Home</a></li>
             <li><a href="#sobre">Sobre</a></li>
             <li><a href="#serviços">Serviços</a></li>
             <li><a href="#contatos">Contatos</a></li> 
@@ -101,7 +101,7 @@
             <h3>Forma<span>Forte</span></h3>
 
             <p class="footer-links">
-                <a href="#home">home</a>
+                <a href="#home">Home</a>
                 |
                 <a href="#serviços">Serviços</a>
                 |
